# 584-Build-System-Exercise-Py

./: README.md  setup.cfg  setup.py
sharkpy/: __init__.py
