[metadata]
name = sharkpy
author = Cody Van De Mark
author-email = cavigm@rit.edu
summary = The best left-shark simulator this side of campus
url = "https://github.com/IGM-Software-On-Linux/584-Build-System-Exercise-Py"
description-file = README.md
license = GPLv3
keywordws =
    leftshark
    shark
    python
    pygame
[files]
packages = 
    sharkpy
[entry_points]
console_scripts =
    sharkpy = sharkpy:main
